Fri Oct 11 23:52:17 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Some strncat -> silc_strncat changes our the core and
	  client library.

	* Added SILC_SKE_STATUS_SIGNATURE_ERROR and OUT_OF_MEMORY
	  errors.  Added better error printing to SKE library.
	  Affected files lib/silcske/silcske.c, silcske_status.h and
	  payload.c.

	* Save the PKCS key length even if only private key is set to	
	  SilcPKCS.  Affected file lib/silccrypt/silcpkcs.[ch] and rsa.c.

	* Fixed the usage of silc_pkcs_get_key_len since it returns the
	  length in bits not in bytes.  Affected files are
	  lib/silcske/silcske.c, lib/silccore/silcauth.c and
	  silcd/server_query.c.

Wed Oct  9 17:22:57 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_attribute_payload_encode_data to directly encode
	  the data into the attributes buffer.  Renamed function
	  silc_attribute_payload_parse_list to silc_attribute_payload_parse.
	  Affected files are lib/silccore/silcattrs.[ch].

	* silc_hash_table_find_foreach calls the foreach function now
	  once even if the nothing was found with context set to NULL.
	  Affected file lib/silcutil/silchashtable.[ch].

	* Remove the RESOLVING flag from client entry after received
	  the Requested Attributes from the client.  Fixed memory leak
	  in client entry freeing.  Affected files silcd/server_query.c
	  and idlist.c.

	* Added Requested Attributes support into SILC Client Library.
	  It is not able to send requested attributes in WHOIS command,
	  and also receive and process requested attributes.  Added
	  silc_client_attribute_[add|del] and silc_client_attributes_get
	  functions.  Added also `ignore_requested_attributes' to the
	  SilcClientParams to not use attributes in client.  Affected
	  files are lib/silcclient/command.c, client_attrs.[ch],
	  silcclient.h, client_internal and client.[ch].

	* Changed the silc_client_get_client_by_id to support Requested
	  Attributes, it takes them as argument now.  Affected file